<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:text="@string/name_label"/>

        <EditText
            android:id="@+id/game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_view"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_game_name"/>

        <TextView
            android:id="@+id/developer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_name"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textSize="25sp"
            android:text="@string/developer_label"/>

        <EditText
            android:id="@+id/developer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/developer_view"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_developer"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/developer_name"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:elevation="4dp"
            android:text="@string/button_create"/>

    </RelativeLayout>

</ScrollView>