<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/update_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:labelFor="@+id/update_game_name"
            android:text="@string/update_name_label"/>

        <EditText
            android:id="@id/update_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_name_view"
            android:layout_marginTop="20dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/update_developer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_game_name"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textSize="25sp"
            android:labelFor="@+id/update_developer_name"
            android:text="@string/update_developer_label"/>

        <EditText
            android:id="@id/update_developer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_developer_view"
            android:layout_marginTop="20dp"
            android:inputType="text"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/update_developer_name"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:elevation="4dp"
            android:text="@string/update_button"/>

    </RelativeLayout>

</ScrollView>